Extract ItemArmorGeoLayer's ModelPart bone matcher to its own method for easy overriding